[gd_scene load_steps=6 format=3 uid="uid://bfyunt4inngm2"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_x5s4n"]
[ext_resource type="Texture2D" uid="uid://crgoyjk0vf3wh" path="res://Knighs_Soul_wallpaper.png" id="2_j3tpl"]
[ext_resource type="FontFile" uid="uid://dbepmpin73w7n" path="res://assets/fonts/PixelatedEleganceRegular-ovyAA.ttf" id="3_t3e3r"]
[ext_resource type="Script" path="res://scenes/music_player.gd" id="4_m2a22"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wwp1v"]
texture = ExtResource("2_j3tpl")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5s4n")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -12.0
script = ExtResource("4_m2a22")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wwp1v")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 9.0
offset_bottom = 36.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_t3e3r")
theme_override_font_sizes/font_size = 29
text = "    A Knight's Soul"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = -115.0
offset_right = 23.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 0

[node name="New Game" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_t3e3r")
text = "New game"

[node name="Level Select" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_t3e3r")
text = "Level Select"

[node name="Options" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_t3e3r")
text = "Options
"

[node name="Quit" type="Button" parent="Main"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_t3e3r")
text = "Quit"

[node name="LevelSelect" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = -107.0
offset_right = 23.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 0

[node name="Back" type="Button" parent="LevelSelect"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_t3e3r")
text = "Back"

[node name="TextEdit" type="TextEdit" parent="LevelSelect"]
custom_minimum_size = Vector2(132, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_t3e3r")
placeholder_text = "Insert Code
"

[node name="Load" type="Button" parent="LevelSelect"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_t3e3r")
text = "Load
"

[node name="Options" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = -102.0
offset_right = 23.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 0

[node name="FullScreen" type="Button" parent="Options"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_t3e3r")
text = "Fullscreen"

[node name="Options_back" type="Button" parent="Options"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_t3e3r")
text = "Back"

[connection signal="pressed" from="Main/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Main/Level Select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Main/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="LevelSelect/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="LevelSelect/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Options/FullScreen" to="." method="_on_full_screen_pressed"]
[connection signal="pressed" from="Options/Options_back" to="." method="_on_options_back_pressed"]
